// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SemiCircleChart renders a semi-circle chart 1`] = `
<div
  class="ez-viz"
  style="width: 800px; height: 600px;"
>
  <div class="ez-fragment-tooltip">
    <div class="ez-fragment-filter">
      <div class="ez-chart">
        <svg
          class="ez-svg"
          style="width: 800px; height: 600px;"
        >
          <g transform="translate(100, 100)">
            <g
              transform="translate(300,400)"
              class="ez-pie"
            >
              <path
                d="M-96.56781074217112,-297.2051613422355L0,0Z"
                fill="red"
                stroke="#FFF"
                stroke-width="0"
                data-testid="ez-arc"
                class="ez-arc"
              >
              </path>
              <path
                d="M312.5,0L0,0Z"
                fill="green"
                stroke="#FFF"
                stroke-width="0"
                data-testid="ez-arc"
                class="ez-arc"
              >
              </path>
            </g>
          </g>
        </svg>
      </div>
      <div class="ez-legend">
        <div
          role="button"
          class="ez-legend-key"
        >
          <div
            class="ez-legend-box"
            style="background-color: red; border: 2px solid red;"
          >
          </div>
          <span class="ez-legend-text">
            Alpha
          </span>
        </div>
        <div
          role="button"
          class="ez-legend-key ez-legend-disable"
        >
          <div
            class="ez-legend-box"
            style="background-color: rgba(255, 255, 255, 0); border: 2px solid blue;"
          >
          </div>
          <span class="ez-legend-text">
            Beta
          </span>
        </div>
        <div
          role="button"
          class="ez-legend-key"
        >
          <div
            class="ez-legend-box"
            style="background-color: green; border: 2px solid green;"
          >
          </div>
          <span class="ez-legend-text">
            Gamma
          </span>
        </div>
      </div>
    </div>
    <div
      class="ez-tooltip"
      style="left: 0px; top: 0px; opacity: 0;"
    >
    </div>
  </div>
</div>
`;

exports[`SemiCircleChart renders a semi-circle chart 2`] = `
<div
  class="ez-viz"
  style="width: 800px; height: 600px;"
>
  <div class="ez-fragment-tooltip">
    <div class="ez-fragment-filter">
      <div class="ez-chart">
        <svg
          class="ez-svg"
          style="width: 800px; height: 600px;"
        >
          <g transform="translate(100, 100)">
            <g
              transform="translate(300,400)"
              class="ez-pie"
            >
              <path
                d="M-96.56781074217112,-297.2051613422355A312.5,312.5,0,0,0,-312.5,-3.827021247335479e-14L0,0Z"
                fill="red"
                stroke="#FFF"
                stroke-width="0"
                data-testid="ez-arc"
                class="ez-arc"
              >
              </path>
              <path
                d="M312.5,0A312.5,312.5,0,0,0,-96.56781074217112,-297.2051613422355L0,0Z"
                fill="green"
                stroke="#FFF"
                stroke-width="0"
                data-testid="ez-arc"
                class="ez-arc"
              >
              </path>
            </g>
          </g>
        </svg>
      </div>
      <div class="ez-legend">
        <div
          role="button"
          class="ez-legend-key"
        >
          <div
            class="ez-legend-box"
            style="background-color: red; border: 2px solid red;"
          >
          </div>
          <span class="ez-legend-text">
            Alpha
          </span>
        </div>
        <div
          role="button"
          class="ez-legend-key ez-legend-disable"
        >
          <div
            class="ez-legend-box"
            style="background-color: rgba(255, 255, 255, 0); border: 2px solid blue;"
          >
          </div>
          <span class="ez-legend-text">
            Beta
          </span>
        </div>
        <div
          role="button"
          class="ez-legend-key"
        >
          <div
            class="ez-legend-box"
            style="background-color: green; border: 2px solid green;"
          >
          </div>
          <span class="ez-legend-text">
            Gamma
          </span>
        </div>
      </div>
    </div>
    <div
      class="ez-tooltip"
      style="left: 0px; top: 0px; opacity: 0;"
    >
    </div>
  </div>
</div>
`;
